-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-rc1, Qt Creator 4.2.0-rc1
-
Windows 7 64 bit
- Open a simple QML file in Creator:
import QtQuick 1.1 Rectangle { width: 360 height: 360 Text { text: qsTr("Hello World") anchors.centerIn: parent } }
- In the Outline view for the file, start dragging the width property of the Rectangle.
- While dragging, press Ctrl to indicate that you want to copy the property.
A small "+" icon appears next the mouse pointer. - Drop the property onto the Text item in the Outline view.
The width property is being moved into the Text item.
Instead, the width property should be copied. After this, the line "width: 360" should appear twice, once in the Rectangle item and once in the Text item.
- replaces
-
QTCREATORBUG-14668 Drag & Drop of element in Outline view claims to copy but moves it instead
-
- Closed
-