QmlJs: prevent "copy" icon in outline drag and drop

Copying items in the outline tree is not allowed, so the icon it is
not shown while dragging with the CTRL button pressed.

Task-number: QTCREATORBUG-13450
Change-Id: Ibfcf954c273051ef03112d11ee6a3457530802bb
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>